# AIStudio-Manager

./: .config.yml  .gitignore  README.md  black-browser.js  config-loader.js  config-manager.js  package.json  pnpm-lock.yaml  save-auth.js  server.js
server/: auth-source.js  browser-manager.js  connection-registry.js  index.js  logging-service.js  message-queue.js  proxy-server-system.js  request-handler-methods.js  request-handler-translators.js  request-handler.js  status-page.js
tauri-app/: index.html  package.json  pnpm-lock.yaml
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: Layout.tsx
tauri-app/src/lib/: api.ts
tauri-app/src/pages/: Accounts.tsx  Config.tsx  Dashboard.tsx  Logs.tsx  TokenStats.tsx  Traffic.tsx
